feat:room detail
Former-commit-id: d5f48c3e430a7b3876147181015efdfb5e985139